--- a/benchmark page/benchmark.css
+++ b/benchmark page/benchmark.css
@@ -12,9 +12,10 @@ body {
 
 }
 .main{
-   margin-right:20%;
-   margin-left: 20%;
-   width: 60%;
+   display: flex;
+   justify-content: end;
+   margin-right: 250px;
+   
 }
 .logo{
     width: 150px;
@@ -31,9 +32,10 @@ h3{
     font-weight: 450;
 }
 .countdown-container {
-    position: relative;
+    
+    
     display: flex;
-    justify-content: center;
+    justify-content: flex;
     align-items: center;
     width: 200px;
     height: 200px;
@@ -62,6 +64,7 @@ svg {
     stroke-dasharray: 339.292; /* Perimetro del cerchio (2 * π * r) */
     stroke-dashoffset: 0;
     transition: stroke-dashoffset 1s linear;
+    
 };
 .Button{
     cursor: pointer;
@@ -74,3 +77,4 @@ svg {
     font-size: 16px;
     font-weight: 100px;
 }
+
